# Proof-of-Concept-Editor-in-Bevy

./: Cargo.toml  README.md
src/: file_io.rs  lib.rs  main.rs  ui_plugin.rs  window_persistence.rs
src/ui_plugin/: bevy_ui_plugin.rs  egui_persistence.rs  undo_plugin.rs
