[package]
name = "game_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_app = { version = "0.12" }
bevy_asset = { version = "0.12" }
bevy_core = { version = "0.12" }
bevy_ecs = { version = "0.12" }
bevy_hierarchy = { version = "0.12" }
bevy_log = { version = "0.12" }
bevy_math = { version = "0.12" }
bevy_reflect = { version = "0.12" }
bevy_time = { version = "0.12" }
bevy_utils = { version = "0.12" }
bevy_window = { version = "0.12", features = ["serialize"] }

bevy_core_pipeline = { version = "0.12" }
bevy_pbr = { version = "0.12", optional = true }
bevy_render = { version = "0.12" }

egui = "0.23"
bevy_egui = "0.23"

image = { version = "0.24", default-features = false }
once_cell = "1.16"
pretty-type-name = "1.0"
smallvec = "1.10"
egui_dock = { version = "0.8.2", features = ["serde"] }
egui-gizmo = "0.12"
bevy-inspector-egui = "0.21.0"
bevy-inspector-egui-derive = { version = "0.21.0" }

serde = "1.0"
serde_json = "1.0"
directories = "5.0.1"
ron = "0.8.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
